# server/pay/controller/send.go
@@ -1,6 +1,6 @@
 // @Author liuYong
 // @Created at 2020-01-05
-// @Modified at 2020-01-05
+// @Modified at 2020-02-25
 package controller
 
 import (
@@ -12,17 +12,27 @@ type Send struct {
 	c *gin.Context
 }
 
-func (s *Send) Response(httpCode int, errorCode int, data interface{}) {
+type JSONResult struct {
+	Code int         `json:"code"`
+	Msg  string      `json:"msg"`
+	Data interface{} `json:"data"`
+}
+
+func (s *Send) Response(httpCode int, result *JSONResult) {
 	s.c.JSON(
 		httpCode,
-		gin.H{
-			"code": errorCode,
-			"msg":  message.GetMsg(errorCode),
-			"data": data,
-		},
+		result,
 	)
 }
 
 func NewSend(c *gin.Context) *Send {
 	return &Send{c: c}
+}
+
+func NewJSONResult(errorCode int, data interface{}) *JSONResult {
+	return &JSONResult{
+		Code: errorCode,
+		Msg:  message.GetMsg(errorCode),
+		Data: data,
+	}
 }
